# decon

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  NOTICES.txt  README.md  debug_config.yaml  decon_analysis.ipynb  eval_stats.csv  examine_datasets.py  simple.md  test_filenames.rs  toxic.md
.claude/: settings.local.json
.claude/commands/: commit
.github/workflows/: ci.yml  clippy.yml
config/: default.yaml  evals.yaml  orchestration.yaml  reports_paths.txt  simple-cl100k.yaml  simple-word.yaml  simple.yaml  toxic.yaml
doc/: configuration.md  deployment.md  eval-datasets.md  minhash.md  simple-details.md  simple.md
doc/repro/: olmo-synth.yaml  olmo-web.yaml
examples/: minhash.yaml  orchestration.yaml  simple.yaml  toxic.yaml
examples/decontamination/: config.yaml  eval_datasets.yaml
examples/dev/: config_toxic.yaml  config_welsh.yaml  eval_datasets.yaml  minhash.yaml  simple.yaml  toxic.yaml
examples/eval/: eval_datasets.yaml  simple.yaml  toxic.yaml
fixtures/oe-eval-map/: task_dataset_mapping.json
my_stats/: eval_instances_by_suite.csv  ngram_distribution.csv  summary.csv  training_docs_by_suite.csv
python/: README.md  contamination-summary.py  count_eval_datasets.py  deploy.py  download_evals.py  download_s3_evals.py  dump_datasets.py  evals.py  examine_datasets.py  generate_orchestrator_command.py  get_eval_stats.py  orchestration.py  prepare_embeddings.py  requirements.txt
src/: daemon.rs  lib.rs  main.rs  minhash.rs  reference.rs  review.rs  server.rs  simple.rs  toxic.rs
tests/: detect_integration_test.rs  sampling_test.rs
(+47 files in other folders)
