[package]
name = "decon"
version = "0.3.0"
edition = "2024"
rust-version = "1.88.0"
description = "Contamination detection for text training data"
license = "Apache-2.0"
repository = "https://github.com/allenai/decon"
homepage = "https://github.com/allenai/decon"
readme = "README.md"
keywords = ["llm", "contamination", "detection", "training", "evaluation"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
serde_json = "1.0.97"
zstd = "0.13.1"
clap = { version = "4.1.11", features = ["derive"] }
indicatif = "0.17.8"
flate2 = "1.0"
bzip2 = "0.4"
xz2 = "0.1"
serde = { version = "1.0.198", features = ["derive"]}
tiktoken-rs = "0.5.8"
regex = "1.10.4"
dashmap = {version = "5.5.3", features=["rayon"]}
rayon = "1.10.0"
serde_yaml = "0.9.34"
unicode-segmentation = "1.12.0"
mj_io = "0.1.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
thread_local = "1.1"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
